fixes alignment issue of start btns and game info

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ h4 {
 
 .game-info {
   position: absolute;
-  top: 27%;
+  top: 32%;
   left: 15%;
 
 }
@@ -118,7 +118,7 @@ button:hover {
 }
 
 .startBtn {
-  margin-top:60px;
+  margin-top:20px;
   margin-left:20px;
 }
 
